Fixed Join button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="buttons">
             <a href="newgame.html" class="btn btn-outline-light btn-lg"  role="button" id="newgame" >New Game</a>
             <br>
-            <a href="joingame.html" type="button" class="btn btn-outline-light btn-lg" role="button" id="joingame">Join Game</a>
+            <a href="joingame.html" class="btn btn-outline-light btn-lg" role="button" id="joingame">Join Game</a>
         </div>  
     </body>
 </html>
