Working on Join page

--- a/joingame.html
+++ b/joingame.html
@@ -10,5 +10,22 @@
         <hr>
         <h1>Join Game</h1>
         <hr>
+        <div class="gamcodeusername">
+            <form class="form-row">
+                <label class="sr-only" for="GameCode">Game Code</label>
+                <input type="text" class="form-control mb-2 mr-sm-2" maxlength="4" id="GameCode" placeholder="Game Code (e.g. ABXY)">
+            
+                <label class="sr-only" for="Username">Username</label>
+                <div class="input-group mb-2 mr-sm-2">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">@</div>
+                </div>
+                <input type="text" class="form-control" id="Username" placeholder="Username">
+                </div>
+            </form>
+        </div>
+        <div class="buttons">
+            <a href="#" class="btn btn-outline-light btn-lg" role="button" id="join">Join</a>
+        </div>
     </body>
 </html>
